# homeworld

./: .stylish-haskell.yaml  Core.hs  GamePrelude.hs  GameTree.hs  Games.hs  HWGame.hs  HWMove.hs  Main.hs  Moves.hs  RunTTT.hs  THUtils.hs  TTT.hs  TTTBackup.hs  TTTMove.hs  Types.hs  homeworlds.cabal  stack.ghcjs.yaml  stack.yaml
Game/: Tree.hs
Homeworlds/: Game.hs  Move.hs  Types.hs
TTT/: Main.hs  Move.hs  Types.hs
exe/: homeworlds-cli.hs  homeworlds-web.hs
lib/: Core.hs  GameTree.hs
lib/Homeworlds/: Game.hs  Move.hs  Types.hs
lib/TTT/: Main.hs  Move.hs  Types.hs
script/: bootstrap  build  release
