name:                homeworlds
version:             0.1.0.0
license:             AGPL-3
license-file:        LICENSE
author:              Benjamin Summers
maintainer:          ben@benjaminsummers.net
category:            Game
build-type:          Simple
cabal-version:       >=1.10

executable homeworlds
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -O2
  other-modules:       GamePrelude GameTree HWGame HWMove RunTTT Setup TTT TTTMove Types

  default-extensions:
    DeriveFoldable
    DeriveTraversable
    FlexibleInstances
    LambdaCase
    NoImplicitPrelude
    ScopedTypeVariables
    TemplateHaskell
    TupleSections
    UnicodeSyntax

  build-depends:
    aeson,
    base,
    bytestring,
    containers,
    lens,
    mmorph,
    MonadRandom,
    mtl,
    pretty-show,
    random-shuffle,
    transformers
