name:                homeworlds
version:             0.1.0.0
license:             AGPL-3
license-file:        LICENSE
author:              Benjamin Summers
maintainer:          ben@benjaminsummers.net
category:            Game
build-type:          Simple
cabal-version:       >=1.10

executable homeworlds
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -Wall
  other-modules:
    Core
    Game.Tree
    Homeworlds.Game
    Homeworlds.Move
    Homeworlds.Types
    TTT.Main
    TTT.Move
    TTT.Types

  default-extensions:
    DeriveFoldable
    DeriveTraversable
    FlexibleInstances
    LambdaCase
    OverloadedStrings
    ScopedTypeVariables
    TemplateHaskell
    TupleSections
    UnicodeSyntax
    PackageImports
    NoImplicitPrelude

  build-depends:
    aeson,
    base,
    basic-prelude,
    bytestring,
    containers,
    IfElse,
    lens,
    mmorph,
    MonadRandom,
    mtl,
    pretty-show,
    random-shuffle,
    string-conversions,
    template-haskell,
    transformers
