name:                homeworlds
version:             0.1.0.0
license:             AGPL-3
license-file:        LICENSE
author:              Benjamin Summers
maintainer:          ben@benjaminsummers.net
category:            Game
build-type:          Simple
cabal-version:       >=1.10

Flag Web
  Description: Enable web-only dependencies.
  Default:     False

Executable homeworlds-cli
  hs-source-dirs:      exe
  main-is:             homeworlds-cli.hs
  default-language:    Haskell2010
  ghc-options:         -O2 -Wall
  default-extensions:
    DeriveFoldable
    DeriveTraversable
    FlexibleInstances
    LambdaCase
    OverloadedStrings
    ScopedTypeVariables
    TemplateHaskell
    TupleSections
    UnicodeSyntax
    PackageImports
    NoImplicitPrelude
    MultiParamTypeClasses
    FunctionalDependencies

  build-depends:
    aeson,
    base,
    basic-prelude,
    bytestring,
    containers,
    homeworlds,
    IfElse,
    lens,
    mmorph,
    MonadRandom,
    mtl,
    pretty-show,
    random-shuffle,
    string-conversions,
    template-haskell,
    transformers


Executable homeworlds-web
  hs-source-dirs:      exe
  default-language:    Haskell2010
  ghc-options:         -O2 -Wall

  if flag(Web)
    main-is:           homeworlds-web.hs
  else
    main-is:           homeworlds-cli.hs

  default-extensions:
    DeriveFoldable
    DeriveTraversable
    FlexibleInstances
    LambdaCase
    OverloadedStrings
    ScopedTypeVariables
    TemplateHaskell
    TupleSections
    UnicodeSyntax
    PackageImports
    NoImplicitPrelude
    MultiParamTypeClasses
    FunctionalDependencies

  build-depends:
    aeson,
    base,
    basic-prelude,
    bytestring,
    containers,
    homeworlds,
    IfElse,
    lens,
    mmorph,
    MonadRandom,
    mtl,
    pretty-show,
    random-shuffle,
    reflex,
    string-conversions,
    template-haskell,
    ref-tf,
    dependent-sum,
    file-embed,
    transformers

  if flag(Web)
    build-depends:
      ghcjs-dom,
      reflex-dom


Library
  default-language:    Haskell2010
  hs-source-dirs:      lib
  ghc-options:         -O2 -Wall
  exposed-modules:
    Core
    GameTree
    Homeworlds.Game
    Homeworlds.Move
    Homeworlds.Types
    TTT.Main
    TTT.Move
    TTT.Types

  default-extensions:
    DeriveFoldable
    DeriveTraversable
    FlexibleInstances
    LambdaCase
    OverloadedStrings
    ScopedTypeVariables
    TemplateHaskell
    TupleSections
    UnicodeSyntax
    PackageImports
    NoImplicitPrelude
    MultiParamTypeClasses
    FunctionalDependencies

  build-depends:
    aeson,
    base,
    basic-prelude,
    bytestring,
    containers,
    IfElse,
    lens,
    mmorph,
    MonadRandom,
    mtl,
    pretty-show,
    random-shuffle,
    string-conversions,
    template-haskell,
    transformers
